@@ -472,6 +472,7 @@ namespace Banshee.SmartPlaylist
             SmartPlaylistSource playlist = new SmartPlaylistSource(id, name, condition, 
                 order_by, limit_number, limit_criterion);
             LibrarySource.Instance.AddChildSource(playlist);
+            SourceManager.AddSource (playlist, false);
         }
     }
 }
